# datadup

./: Cargo.toml  README.md  duplicates.json  lm1b-duplicates.json  main.py  pg19-duplicates.json  pyproject.toml  query_infinigram.py
scripts/: load_dataset.py  make_suffix_array.py  query_infinigram.py  run_pg19_c4.sh
src/: main.rs
src/datadup/: data.py  dedup.py
yamls/: c4.yaml
