[project]
name = "datadup"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Justin T Chiu", email = "chiu.justin.t@gmail.com"},
]
dependencies = [
    "datasets",
    "numpy",
    "scipy",
    "datasketch",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
